--- a/Qruda/app/build.gradle
+++ b/Qruda/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'org.jsoup:jsoup:1.8.1'
+    compile 'com.pkmmte.view:circularimageview:1.1'
 }
