--- a/Ennova.GCM.API/Ennovva.GCM.Core/Ennovva.GCM.Core.csproj
+++ b/Ennova.GCM.API/Ennovva.GCM.Core/Ennovva.GCM.Core.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="AplicacionesCore.cs" />
     <Compile Include="DispositivosCore.cs" />
+    <Compile Include="GeolocalizacionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
