likes y perfil de usuario de facebook

--- a/Ennova.GCM.API/Ennovva.GCM.Core/Ennovva.GCM.Core.csproj
+++ b/Ennova.GCM.API/Ennovva.GCM.Core/Ennovva.GCM.Core.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AplicacionesCore.cs" />
+    <Compile Include="CatalogoCore.cs" />
     <Compile Include="DispositivosCore.cs" />
     <Compile Include="GeolocalizacionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
