avances de consulta por marca categoria y detalle de producto

--- a/Almashopping2/app/src/main/AndroidManifest.xml
+++ b/Almashopping2/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".google"
             android:label="@string/title_activity_google" >
         </activity>
+        <activity
+            android:name=".DetalleProducto"
+            android:label="@string/title_activity_detalle_producto" >
+        </activity>
     </application>
 
 </manifest>
