--- a/Almashopping2/app/src/main/AndroidManifest.xml
+++ b/Almashopping2/app/src/main/AndroidManifest.xml
@@ -11,16 +11,19 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Alma" >
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -34,15 +37,23 @@
 
         <activity
             android:name=".Inicio"
-            android:label="@string/title_activity_inicio" >
+            android:label="@string/title_activity_inicio"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+
         </activity>
         <activity
             android:name=".google"
             android:label="@string/title_activity_google" >
         </activity>
+
         <activity
             android:name=".DetalleProducto"
-            android:label="@string/title_activity_detalle_producto" >
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+
         </activity>
     </application>
 
