--- a/Almashopping2/app/src/main/AndroidManifest.xml
+++ b/Almashopping2/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission
+        android:name="android.com.almashopping.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.com.almashopping.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -55,6 +62,17 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <receiver
+            android:name=".GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="android.com.almashopping"/>
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".GCMIntentService" />
+
     </application>
 
 </manifest>
