avances del administrador

--- a/ECA/Web.config
+++ b/ECA/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ECA-20150511121606;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ECA-20150511121606.mdf" />
+    <add name="ECAEntities" connectionString="metadata=res://*/Ecca.csdl|res://*/Ecca.ssdl|res://*/Ecca.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLDEV;initial catalog=ecca;user id=sa;password=makaf4e;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -89,7 +91,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
