--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ECA\ECA.DAL\packages.config" />
   <repository path="..\ECA\packages.config" />
   <repository path="..\EnnovvaCodeAcademy\packages.config" />
 </repositories>
