--- a/ECA/ECA.csproj
+++ b/ECA/ECA.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\News2\Edit.cshtml" />
     <Content Include="Views\News2\Delete.cshtml" />
     <Content Include="Views\News\Create.cshtml" />
+    <Content Include="Views\Admin\Articles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
