--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\ECA\ECA.DAL\packages.config" />
   <repository path="..\ECA\packages.config" />
   <repository path="..\EnnovvaCodeAcademy\packages.config" />
+  <repository path="..\Paila\packages.config" />
 </repositories>
