--- a/ECA/ECA.csproj
+++ b/ECA/ECA.csproj
@@ -286,6 +286,7 @@
     <Content Include="Views\Admin\Articles.cshtml" />
     <Content Include="Views\Shared\_Login.cshtml" />
     <Content Include="Views\Users\Login.cshtml" />
+    <Content Include="Views\Users\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
